// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@npm/mobydick-core/ImageView should renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 12,
      },
      undefined,
    ]
  }
>
  <View />
</View>
`;

exports[`@npm/mobydick-core/ImageView should renders correctly with styles 1`] = `
<View
  style={
    Array [
      Object {
        "marginBottom": 12,
      },
      Object {
        "flex": 1,
      },
    ]
  }
>
  <View />
</View>
`;
